# upgrait-heatcontrol-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
src/upgrait_heatcontrol_api/: __init__.py  client.py  connection.py  crypto.py  discovery.py  exceptions.py  models.py
tests/: conftest.py  test_client.py
