[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upgrait-heatcontrol-api"
version = "0.1.1"
description = "Async Python API client for the UPGRAIT HeatControl 3rd-party connector."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  {name = "UPGRAIT GmbH"}
]
keywords = ["home-automation", "heatcontrol", "hvac", "aiohttp", "zeroconf"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Home Automation",
  "Framework :: AsyncIO",
  "Typing :: Typed",
]
dependencies = [
  "aiohttp>=3.12,<4",
  "PyNaCl>=1.5,<2",
  "zeroconf>=0.136,<1"
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "aioresponses>=0.7,<1",
  "twine>=6,<7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://upgrait.com/heatcontrol/"
Repository = "https://github.com/UPGRAITgmbh/upgrait-heatcontrol-api"
"Bug Tracker" = "https://github.com/UPGRAITgmbh/upgrait-heatcontrol-api/issues"
Changelog = "https://github.com/UPGRAITgmbh/upgrait-heatcontrol-api/releases"

[tool.pytest.ini_options]
asyncio_mode = "auto"
